# AGC_Agent

./: .gitignore  ACG_Agent_Enhance_Plan.md  Admin & Compliance Guardian — Technical Blueprint v2.1.md  COMPLETION_REPORT.md  CONFORMANCE_ANALYSIS.md  Makefile  README.md  SETUP.md  TUTTO_COMPLETATO.md  docker-compose.cloud.yml  docker-compose.yml  quickstart.sh
backend/: .env.example  Dockerfile  pyproject.toml
backend/.pytest_deps/charset_normalizer-3.4.7.dist-info/: RECORD
backend/.pytest_deps/google_auth_oauthlib-1.4.0.dist-info/: RECORD
backend/.pytest_deps/idna-3.17.dist-info/: RECORD
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_chat_sessions.py  0003_google_oauth_tokens.py  0004_agent_enhancement_schema.py  0005_folders_table.py
backend/app/: __init__.py  config.py  main.py
backend/app/adapters/: __init__.py
backend/app/agent/: __init__.py  state.py
backend/app/api/: __init__.py  deps.py  oauth_scopes.py
backend/app/core/: __init__.py
backend/app/db/: __init__.py  models.py  seed.py  session.py
backend/scripts/: generate_keys.py  init_db.py  reset_db.py  verify_setup.py
backend/tests/: __init__.py
backend/tests/integration/: __init__.py  test_documents.py  test_e2e_flows.py  test_enhancement_api.py  test_pipeline.py  test_websocket.py
backend/tests/property/: test_confirmation_properties.py  test_cross_document_properties.py  test_escalation_properties.py  test_report_properties.py  test_risky_clause_properties.py  test_source_monitor_properties.py
backend/tests/unit/: __init__.py  test_auth.py  (+26 more)
(+222 files in other folders)
