[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "acg-backend"
version = "0.1.0"
description = "Admin & Compliance Guardian — Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]==2.0.36",
    "alembic==1.14.0",
    "asyncpg==0.30.0",
    "pydantic==2.10.3",
    "pydantic-settings==2.6.1",
    "langgraph==0.2.56",
    "langchain-core==0.3.25",
    "anthropic==0.40.0",
    "openai==1.57.4",
    "google-generativeai==0.8.3",
    "structlog==24.4.0",
    "python-jose[cryptography]==3.3.0",
    "passlib[bcrypt]==1.7.4",
    "python-multipart==0.0.20",
    "apscheduler==3.10.4",
    "boto3==1.35.81",
    "httpx==0.28.1",
    "pymupdf>=1.27.0",
    "pandas==2.2.3",
    "openpyxl==3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "hypothesis==6.122.3",
    "mypy==1.13.0",
    "ruff==0.8.4",
    "types-passlib==1.7.7.20240819",
    "types-python-jose==3.3.4.20240106",
    "boto3-stubs[s3]==1.35.81",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
exclude = ["alembic/"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
